Misc. layout bug fixes

--- a/www/css/style-rts.linux.css
+++ b/www/css/style-rts.linux.css
@@ -2247,12 +2247,11 @@ a#inbox-indicator.new-messages:hover::before {
 	}
 	.page-toolbar > * {
 		line-height: 1.15;
-		padding: 6px 0;
+		padding: 8px 0 4px 0;
 	}
 	#content:not(.user-page) .page-toolbar {
 		flex-direction: column-reverse;
 		align-self: start;
-		font-size: 1.25rem;
 	}
 	#content.user-page .page-toolbar > * {
 		text-align: center;
@@ -2403,10 +2402,10 @@ a#inbox-indicator.new-messages:hover::before {
 	flex-basis: unset;
 }
 
-@media only screen and (max-width: 720px) {
+@media only screen and (max-width: 520px) {
 	#content.index-page > .sublevel-nav.sort {
 		flex-flow: column;
-		margin-left: 4px;
+		margin-left: 10px;
 	}
 }
 
